# bytewise

./: CMakeLists.txt  LICENSE  README.md  bytewise.c  bytewise.cpp  bytewise.h
